:bug: apparently list-wrapping needs to go after note-wrapping because wrapping makes a copy of the element
so does this mean that any wrapping always needs to run in a separate
pass?

--- a/rulesets/output/economics.css
+++ b/rulesets/output/economics.css
@@ -358,26 +358,6 @@
 /*==========================================================
   ECONOMICS CONFIG
 ==========================================================*/
-:pass(0) [data-type="exercise"][data-label]:not([data-label=""])::after {
-  container: div;
-  class: "os-label-title-thingy";
-  content: attr(data-label);
-  move-to: bTitleLabel; }
-:pass(0) [data-type="exercise"][data-label]:not([data-label=""])::outside {
-  attr-data-type: "exercise-wrapper";
-  container: div;
-  content: pending(bTitleLabel) content(); }
-:pass(0) ol[data-label]:not([data-label=""])::after,
-:pass(0) ul[data-label]:not([data-label=""])::after {
-  container: div;
-  class: "os-label-title-thingy";
-  content: attr(data-label);
-  move-to: bListLabel; }
-:pass(0) ol[data-label]:not([data-label=""])::outside,
-:pass(0) ul[data-label]:not([data-label=""])::outside {
-  attr-data-type: "list-wrapper";
-  container: div;
-  content: pending(bListLabel) content(); }
 :pass(0) div.preface > [data-type="document-title"] {
   container: h1;
   content: content(); }
@@ -458,6 +438,26 @@
 :pass(0) [data-type="metadata"] > [data-type="description"] {
   move-to: trash; }
 
+:pass(1) [data-type="exercise"][data-label]:not([data-label=""])::after {
+  container: div;
+  class: "os-label-title-thingy";
+  content: attr(data-label);
+  move-to: bTitleLabel; }
+:pass(1) [data-type="exercise"][data-label]:not([data-label=""])::outside {
+  attr-data-type: "exercise-wrapper";
+  container: div;
+  content: pending(bTitleLabel) content(); }
+:pass(1) ol[data-label]:not([data-label=""])::after,
+:pass(1) ul[data-label]:not([data-label=""])::after {
+  container: div;
+  class: "os-label-title-thingy";
+  content: attr(data-label);
+  move-to: bListLabel; }
+:pass(1) ol[data-label]:not([data-label=""])::outside,
+:pass(1) ul[data-label]:not([data-label=""])::outside {
+  attr-data-type: "list-wrapper";
+  container: div;
+  content: pending(bListLabel) content(); }
 :pass(1) body {
   counter-reset: chapter; }
 :pass(1) div[data-type="chapter"] {
